journal authors added
