# api/docs/swagger.yaml
@@ -912,6 +912,42 @@ definitions:
       title:
         type: string
     type: object
+  editory_submission_genproto_content_service.CreateJournalAuthorReq:
+    properties:
+      email:
+        type: string
+      faculty_id:
+        type: string
+      full_name:
+        type: string
+      journal_id:
+        type: string
+      photo:
+        type: string
+      university_id:
+        type: string
+    type: object
+  editory_submission_genproto_content_service.CreateJournalAuthorRes:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      faculty_id:
+        type: string
+      full_name:
+        type: string
+      id:
+        type: string
+      journal_id:
+        type: string
+      photo:
+        type: string
+      university_id:
+        type: string
+      updated_at:
+        type: string
+    type: object
   editory_submission_genproto_content_service.CreateSubjectReq:
     properties:
       title:
@@ -1018,6 +1054,40 @@ definitions:
           $ref: '#/definitions/editory_submission_genproto_content_service.Edition'
         type: array
     type: object
+  editory_submission_genproto_content_service.GetJournalAuthorListRes:
+    properties:
+      authors:
+        items:
+          $ref: '#/definitions/editory_submission_genproto_content_service.JournalAuthor'
+        type: array
+      count:
+        type: integer
+    type: object
+  editory_submission_genproto_content_service.GetJournalAuthorRes:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      faculty_id:
+        type: string
+      full_name:
+        type: string
+      id:
+        type: string
+      journal_id:
+        type: string
+      journal_id_data:
+        $ref: '#/definitions/editory_submission_genproto_content_service.Journal'
+      photo:
+        type: string
+      university_id:
+        type: string
+      university_id_data:
+        $ref: '#/definitions/editory_submission_genproto_content_service.University'
+      updated_at:
+        type: string
+    type: object
   editory_submission_genproto_content_service.GetJournalListRes:
     properties:
       count:
@@ -1119,6 +1189,31 @@ definitions:
       last_name:
         type: string
     type: object
+  editory_submission_genproto_content_service.JournalAuthor:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      faculty_id:
+        type: string
+      full_name:
+        type: string
+      id:
+        type: string
+      journal_id:
+        type: string
+      journal_id_data:
+        $ref: '#/definitions/editory_submission_genproto_content_service.Journal'
+      photo:
+        type: string
+      university_id:
+        type: string
+      university_id_data:
+        $ref: '#/definitions/editory_submission_genproto_content_service.University'
+      updated_at:
+        type: string
+    type: object
   editory_submission_genproto_content_service.JournalData:
     properties:
       journal_id:
@@ -1184,6 +1279,44 @@ definitions:
       journal_id:
         type: string
       title:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  editory_submission_genproto_content_service.UpdateJournalAuthorReq:
+    properties:
+      email:
+        type: string
+      faculty_id:
+        type: string
+      full_name:
+        type: string
+      id:
+        type: string
+      journal_id:
+        type: string
+      photo:
+        type: string
+      university_id:
+        type: string
+    type: object
+  editory_submission_genproto_content_service.UpdateJournalAuthorRes:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      faculty_id:
+        type: string
+      full_name:
+        type: string
+      id:
+        type: string
+      journal_id:
+        type: string
+      photo:
+        type: string
+      university_id:
         type: string
       updated_at:
         type: string
@@ -1536,6 +1669,8 @@ definitions:
       draft_checker_id:
         type: string
       file_id:
+        type: string
+      file_url:
         type: string
       id:
         type: string
@@ -2413,7 +2548,7 @@ definitions:
       extKeyUsage:
         description: Sequence of extended key usages.
         items:
-          $ref: '#/definitions/x509.ExtKeyUsage'
+          type: integer
         type: array
       extensions:
         description: |-
@@ -2448,7 +2583,7 @@ definitions:
           type: string
         type: array
       keyUsage:
-        $ref: '#/definitions/x509.KeyUsage'
+        type: integer
       maxPathLen:
         description: |-
           MaxPathLen and MaxPathLenZero indicate the presence and
@@ -2506,7 +2641,7 @@ definitions:
         type: array
       publicKey: {}
       publicKeyAlgorithm:
-        $ref: '#/definitions/x509.PublicKeyAlgorithm'
+        type: integer
       raw:
         description: Complete ASN.1 DER content (certificate, signature algorithm
           and signature).
@@ -2540,7 +2675,7 @@ definitions:
           type: integer
         type: array
       signatureAlgorithm:
-        $ref: '#/definitions/x509.SignatureAlgorithm'
+        type: integer
       subject:
         $ref: '#/definitions/pkix.Name'
       subjectKeyId:
@@ -2576,123 +2711,6 @@ definitions:
       version:
         type: integer
     type: object
-  x509.ExtKeyUsage:
-    enum:
-    - 0
-    - 1
-    - 2
-    - 3
-    - 4
-    - 5
-    - 6
-    - 7
-    - 8
-    - 9
-    - 10
-    - 11
-    - 12
-    - 13
-    type: integer
-    x-enum-varnames:
-    - ExtKeyUsageAny
-    - ExtKeyUsageServerAuth
-    - ExtKeyUsageClientAuth
-    - ExtKeyUsageCodeSigning
-    - ExtKeyUsageEmailProtection
-    - ExtKeyUsageIPSECEndSystem
-    - ExtKeyUsageIPSECTunnel
-    - ExtKeyUsageIPSECUser
-    - ExtKeyUsageTimeStamping
-    - ExtKeyUsageOCSPSigning
-    - ExtKeyUsageMicrosoftServerGatedCrypto
-    - ExtKeyUsageNetscapeServerGatedCrypto
-    - ExtKeyUsageMicrosoftCommercialCodeSigning
-    - ExtKeyUsageMicrosoftKernelCodeSigning
-  x509.KeyUsage:
-    enum:
-    - 1
-    - 2
-    - 4
-    - 8
-    - 16
-    - 32
-    - 64
-    - 128
-    - 256
-    type: integer
-    x-enum-varnames:
-    - KeyUsageDigitalSignature
-    - KeyUsageContentCommitment
-    - KeyUsageKeyEncipherment
-    - KeyUsageDataEncipherment
-    - KeyUsageKeyAgreement
-    - KeyUsageCertSign
-    - KeyUsageCRLSign
-    - KeyUsageEncipherOnly
-    - KeyUsageDecipherOnly
-  x509.PublicKeyAlgorithm:
-    enum:
-    - 0
-    - 1
-    - 2
-    - 3
-    - 4
-    type: integer
-    x-enum-comments:
-      DSA: Unsupported.
-    x-enum-varnames:
-    - UnknownPublicKeyAlgorithm
-    - RSA
-    - DSA
-    - ECDSA
-    - Ed25519
-  x509.SignatureAlgorithm:
-    enum:
-    - 0
-    - 1
-    - 2
-    - 3
-    - 4
-    - 5
-    - 6
-    - 7
-    - 8
-    - 9
-    - 10
-    - 11
-    - 12
-    - 13
-    - 14
-    - 15
-    - 16
-    type: integer
-    x-enum-comments:
-      DSAWithSHA1: Unsupported.
-      DSAWithSHA256: Unsupported.
-      ECDSAWithSHA1: Only supported for signing, and verification of CRLs, CSRs, and
-        OCSP responses.
-      MD2WithRSA: Unsupported.
-      MD5WithRSA: Only supported for signing, not verification.
-      SHA1WithRSA: Only supported for signing, and verification of CRLs, CSRs, and
-        OCSP responses.
-    x-enum-varnames:
-    - UnknownSignatureAlgorithm
-    - MD2WithRSA
-    - MD5WithRSA
-    - SHA1WithRSA
-    - SHA256WithRSA
-    - SHA384WithRSA
-    - SHA512WithRSA
-    - DSAWithSHA1
-    - DSAWithSHA256
-    - ECDSAWithSHA1
-    - ECDSAWithSHA256
-    - ECDSAWithSHA384
-    - ECDSAWithSHA512
-    - SHA256WithRSAPSS
-    - SHA384WithRSAPSS
-    - SHA512WithRSAPSS
-    - PureEd25519
 info:
   contact: {}
   description: This is a api gateway
@@ -5143,6 +5161,213 @@ paths:
                   type: string
               type: object
       summary: Get Article By ID
+      tags:
+      - Journal
+  /journal/{journal-id}/author:
+    get:
+      consumes:
+      - application/json
+      description: Get Author List
+      operationId: get_journal_author_list
+      parameters:
+      - description: journal-id
+        in: path
+        name: journal-id
+        required: true
+        type: integer
+      - description: offset
+        in: query
+        name: offset
+        type: integer
+      - description: limit
+        in: query
+        name: limit
+        type: integer
+      - description: search
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetEditorListResponseBody
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/editory_submission_genproto_content_service.GetJournalAuthorListRes'
+              type: object
+        "400":
+          description: Invalid Argument
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Get Author List
+      tags:
+      - Journal
+    post:
+      consumes:
+      - application/json
+      description: Create Author
+      operationId: create_journal_author
+      parameters:
+      - description: journal-id
+        in: path
+        name: journal-id
+        required: true
+        type: string
+      - description: CreateJournalAuthorReq
+        in: body
+        name: author
+        required: true
+        schema:
+          $ref: '#/definitions/editory_submission_genproto_content_service.CreateJournalAuthorReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Author data
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/editory_submission_genproto_content_service.CreateJournalAuthorRes'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Create Author
+      tags:
+      - Journal
+    put:
+      consumes:
+      - application/json
+      description: Update Editor
+      operationId: update_journal_author
+      parameters:
+      - description: journal-id
+        in: path
+        name: journal-id
+        required: true
+        type: string
+      - description: UpdateJournalAuthorReq
+        in: body
+        name: author
+        required: true
+        schema:
+          $ref: '#/definitions/editory_submission_genproto_content_service.UpdateJournalAuthorReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User data
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/editory_submission_genproto_content_service.UpdateJournalAuthorRes'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Update Editor
+      tags:
+      - Journal
+  /journal/{journal-id}/author/{author-id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Author By ID
+      operationId: get_journal_author_by_id
+      parameters:
+      - description: journal-id
+        in: path
+        name: journal-id
+        required: true
+        type: string
+      - description: author-id
+        in: path
+        name: author-id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: EditorBody
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/editory_submission_genproto_content_service.GetJournalAuthorRes'
+              type: object
+        "400":
+          description: Invalid Argument
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Get Author By ID
       tags:
       - Journal
   /journal/{journal-id}/draft:
