# api/handlers/author.go
@@ -5,7 +5,9 @@ import (
 	"editory_submission/api/models"
 	"editory_submission/config"
 	"editory_submission/genproto/auth_service"
+	"editory_submission/genproto/content_service"
 	"editory_submission/pkg/util"
+	"errors"
 	"github.com/gin-gonic/gin"
 )
 
@@ -189,6 +191,189 @@ func (h *Handler) UpdateAdminAuthor(c *gin.Context) {
 	resp, err := h.services.UserService().UpdateUser(
 		c.Request.Context(),
 		&user,
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// GetJournalAuthorList godoc
+// @ID get_journal_author_list
+// @Router /journal/{journal-id}/author [GET]
+// @Summary Get Author List
+// @Description  Get Author List
+// @Tags Journal
+// @Accept json
+// @Produce json
+// @Param journal-id path integer true "journal-id"
+// @Param offset query integer false "offset"
+// @Param limit query integer false "limit"
+// @Param search query string false "search"
+// @Success 200 {object} http.Response{data=content_service.GetJournalAuthorListRes} "GetEditorListResponseBody"
+// @Response 400 {object} http.Response{data=string} "Invalid Argument"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) GetJournalAuthorList(c *gin.Context) {
+
+	journalId := c.Param("journal-id")
+	if !util.IsValidUUID(journalId) {
+		h.handleResponse(c, http.InvalidArgument, errors.New("journal id is not valid"))
+		return
+	}
+
+	offset, err := h.getOffsetParam(c)
+	if err != nil {
+		h.handleResponse(c, http.InvalidArgument, err.Error())
+		return
+	}
+
+	limit, err := h.getLimitParam(c)
+	if err != nil {
+		h.handleResponse(c, http.InvalidArgument, err.Error())
+		return
+	}
+
+	resp, err := h.services.ContentService().GetJournalAuthorList(
+		c.Request.Context(),
+		&content_service.GetJournalAuthorListReq{
+			Limit:     int32(limit),
+			Offset:    int32(offset),
+			Search:    c.DefaultQuery("search", ""),
+			JournalId: journalId,
+		},
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// CreateJournalAuthor godoc
+// @ID create_journal_author
+// @Router /journal/{journal-id}/author [POST]
+// @Summary Create Author
+// @Description Create Author
+// @Tags Journal
+// @Accept json
+// @Produce json
+// @Param journal-id path string true "journal-id"
+// @Param author body content_service.CreateJournalAuthorReq true "CreateJournalAuthorReq"
+// @Success 201 {object} http.Response{data=content_service.CreateJournalAuthorRes} "Author data"
+// @Response 400 {object} http.Response{data=string} "Bad Request"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) CreateJournalAuthor(c *gin.Context) {
+	var (
+		author content_service.CreateJournalAuthorReq
+	)
+
+	journalId := c.Param("journal-id")
+	if !util.IsValidUUID(journalId) {
+		h.handleResponse(c, http.InvalidArgument, errors.New("journal id is not valid"))
+		return
+	}
+
+	err := c.ShouldBindJSON(&author)
+	if err != nil {
+		h.handleResponse(c, http.BadRequest, err.Error())
+		return
+	}
+
+	author.JournalId = journalId
+
+	resp, err := h.services.ContentService().CreateJournalAuthor(
+		c.Request.Context(),
+		&author,
+	)
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.Created, resp)
+}
+
+// GetJournalAuthorByID godoc
+// @ID get_journal_author_by_id
+// @Router /journal/{journal-id}/author/{author-id} [GET]
+// @Summary Get Author By ID
+// @Description Get Author By ID
+// @Tags Journal
+// @Accept json
+// @Produce json
+// @Param journal-id path string true "journal-id"
+// @Param author-id path string true "author-id"
+// @Success 200 {object} http.Response{data=content_service.GetJournalAuthorRes} "EditorBody"
+// @Response 400 {object} http.Response{data=string} "Invalid Argument"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) GetJournalAuthorByID(c *gin.Context) {
+
+	journalId := c.Param("journal-id")
+	if !util.IsValidUUID(journalId) {
+		h.handleResponse(c, http.InvalidArgument, errors.New("journal id is not valid"))
+		return
+	}
+
+	authorID := c.Param("author-id")
+
+	if !util.IsValidUUID(authorID) {
+		h.handleResponse(c, http.InvalidArgument, "user id is an invalid uuid")
+		return
+	}
+
+	resp, err := h.services.ContentService().GetJournalAuthor(
+		c.Request.Context(),
+		&content_service.GetJournalAuthorReq{
+			Id: authorID,
+		},
+	)
+
+	if err != nil {
+		h.handleResponse(c, http.GRPCError, err.Error())
+		return
+	}
+
+	h.handleResponse(c, http.OK, resp)
+}
+
+// UpdateJournalAuthor godoc
+// @ID update_journal_author
+// @Router /journal/{journal-id}/author [PUT]
+// @Summary Update Editor
+// @Description Update Editor
+// @Tags Journal
+// @Accept json
+// @Produce json
+// @Param journal-id path string true "journal-id"
+// @Param author body content_service.UpdateJournalAuthorReq true "UpdateJournalAuthorReq"
+// @Success 200 {object} http.Response{data=content_service.UpdateJournalAuthorRes} "User data"
+// @Response 400 {object} http.Response{data=string} "Bad Request"
+// @Failure 500 {object} http.Response{data=string} "Server Error"
+func (h *Handler) UpdateJournalAuthor(c *gin.Context) {
+	var author content_service.UpdateJournalAuthorReq
+
+	journalId := c.Param("journal-id")
+	if !util.IsValidUUID(journalId) {
+		h.handleResponse(c, http.InvalidArgument, errors.New("journal id is not valid"))
+		return
+	}
+
+	err := c.ShouldBindJSON(&author)
+	if err != nil {
+		h.handleResponse(c, http.BadRequest, err.Error())
+		return
+	}
+
+	author.JournalId = journalId
+
+	resp, err := h.services.ContentService().UpdateJournalAuthor(
+		c.Request.Context(),
+		&author,
 	)
 
 	if err != nil {
